@@ -66,6 +66,9 @@ x_authority = cpan:RRWO
 Plack::Middleware::ContentLength = 0
 Plack::Middleware::Head = 0
 
+[Prereqs / DevelopRequires ]
+Test::CPAN::Changes = 0.500002
+
 ; authordep Pod::Weaver::Plugin::AppendPrepend
 ; authordep Pod::Weaver::Section::Contributors
 ; authordep Pod::Weaver::Section::SourceGitHub
